--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
     "type": "git",
     "url": "git@github.com:kmamal/key-commands.git"
   },
-  "main": "src/index.js",
+  "exports": "./src/index.js",
   "license": "MIT",
   "dependencies": {
-    "@kmamal/sdl": "^0.3.2",
-    "@kmamal/util": "^0.0.49",
-    "canvas": "^2.8.0"
+    "@kmamal/sdl": "^0.7.8",
+    "@kmamal/util": "^0.1.13",
+    "canvas": "^2.11.2"
   }
 }
